[ticket/12649] RTL alignment fix
PHPBB3-12649

--- a/phpBB/styles/prosilver/theme/bidi.css
+++ b/phpBB/styles/prosilver/theme/bidi.css
@@ -883,6 +883,10 @@ ul.linklist li.small-icon > a, ul.linklist li.breadcrumbs span:first-child > a {
 	padding-right: 0;
 }
 
+.rtl .dropdown fieldset.display-options label {
+	text-align: left;
+}
+
 /* Display actions for ucp and mcp pages */
 .rtl fieldset.display-actions {
 	text-align: left;
